# JANK

./: .gitignore  CMakeLists.txt  README.md  makefile  makefile.txt  syntax.md  test.jpl
include/: codegen.h  lexer.h  llvmgenerator.h  parser.h  typechecker.h  utils.h
lib/: compiler.cpp  lexer.cpp  llvmgenerator.cpp  parser.cpp  typechecker.cpp
src/: CMakeLists.txt  codegen.cpp  driver.cpp  lexer.cpp  parser.cpp  typechecker.cpp
test/: requirements.txt
